[package]
name = "shared-traits"
version = "0.1.0"
edition = "2021"
publish = false

# Make this a standalone workspace (prevents inheriting from parent)
[workspace]

[lib]
path = "src/lib.rs"

[dependencies]
# Use same path as producer.pkg to avoid cargo lockfile collision
miniextendr-api = { path = "../vendor/miniextendr-api" }
