[package]
name = "shared-traits"
version = "0.1.0"
edition = "2021"
publish = false

# Make this a standalone workspace (prevents inheriting from parent)
[workspace]

[lib]
path = "src/lib.rs"

[dependencies]
# In the miniextendr monorepo, use rpkg's shared vendor dir.
miniextendr-api = { path = "../../../rpkg/src/vendor/miniextendr-api" }
