[package]
name = "shared-traits"
version = "0.1.0"
edition = "2021"
publish = false

# Make this a standalone workspace (prevents inheriting from parent)
[workspace]

[lib]
path = "src/lib.rs"

[dependencies]
miniextendr-api = { path = "../../../miniextendr-api" , version = "*" }

# Redirect transitive crates.io lookups to local workspace crates.
[patch.crates-io]
miniextendr-api = { path = "../../../miniextendr-api" }
miniextendr-macros = { path = "../../../miniextendr-macros" }
miniextendr-macros-core = { path = "../../../miniextendr-macros-core" }
