[package]
name = "pigworld"
version = "0.1.0"
edition = "2024"
publish = false

# Make this a standalone workspace (prevents inheriting from parent)
[workspace]

[lib]
path = "lib.rs"
crate-type = ["staticlib"]

[features]
default = []
nonapi = ["miniextendr-api/nonapi"]
connections = ["miniextendr-api/connections"]

[dependencies]
miniextendr-api = { path = "../../vendor/miniextendr-api" }
rand = "0.9"
rand_distr = "0.5"
rayon = "1.10"
itertools = "0.14"

[build-dependencies]
miniextendr-lint = { path = "../../vendor/miniextendr-lint" }
