[package]
name = "pigworld"
version = "0.1.0"
edition = "2024"
publish = false

# Make this a standalone workspace (prevents inheriting from parent)
[workspace]

[lib]
path = "lib.rs"
crate-type = ["staticlib"]

[features]
default = []
nonapi = ["miniextendr-api/nonapi"]
connections = ["miniextendr-api/connections"]

[dependencies]
miniextendr-api = { git = "https://github.com/A2-ai/miniextendr" }
rand = "0.10"
rand_distr = "0.6"
rayon = "1.10"
itertools = "0.14"

[build-dependencies]
miniextendr-lint = { git = "https://github.com/A2-ai/miniextendr" }

# codegen-units = 1 forces the user crate into a single .o so the linker can't drop
# unreferenced linkme #[distributed_slice] archive members (NATIVE registration path).
# Inert on wasm32-*, which registers via the generated wasm_registry.rs (ordinary
# symbol references), not linkme.
[profile.dev]
codegen-units = 1

[profile.release]
codegen-units = 1

# No [patch] block. configure writes .cargo/config.toml per mode:
#   - tarball install (inst/vendor.tar.xz present): [source.crates-io] +
#     [source."git+..."] redirect to vendored-sources, build is offline.
#   - source install + monorepo siblings: [patch."https://github.com/A2-ai/miniextendr"]
#     points the workspace crates at sibling paths.
#   - source install + no siblings (downstream install_github / git clone of just rpkg):
#     no patch, cargo follows the git URL.
# See docs/CRAN_COMPATIBILITY.md.
